
icon:plus[] GraphQL: It is now possible to filter schemas by their container flag.

icon:check[] GraphQL: Fixed a bug that caused an error when multiple queries where executed concurrently.

icon:check[] Core: Increased performance for webroot endpoint.

[[v0.22.0]]
== 0.22.0 (19.07.2018)

icon:bullhorn[] Metadata extraction

[quote]
____
This version of Gentics Mesh introduces the __Metadata extraction__ of file uploads (PDF, Images).
GPS information of images will now be added to the search index. That information can be used to run link:https://getmesh.io/docs/beta/elasticsearch.html#_search_nodes_by_geolocation_of_images[geo search queries].
A detailed description of this feature can be found in our https://getmesh.io/docs/beta/features.html#_metadata_handling[File Uploads Documentation].

Existing binary fields will not be automatically be processed to provide the metadata. You need to manually re-upload the data in order to generate the metadata properties.
____

icon:check[] Image: Focal point information within binary fields will now be utilized when invoking a download request which contains `?crop=fp&height=200&width=100`. Previously the stored information was not used and no focal point cropping was executed. link:https://github.com/gentics/mesh/issues/417[#417]

icon:check[] Schema: A minor issue within the schema diff mechanism has been fixed. Previously the `elasticsearch` property was not correctly handled if an empty object has been provided during an update.

[[v0.21.5]]
== 0.21.5 (14.07.2018)

icon:check[] REST: The order of elements within a micronode list field will now be correctly preserved. Previously the order would change once the list reached a size of about 20 elements. link:https://github.com/gentics/mesh/issues/469[#469]

icon:check[] Memory: The memory footprint for deletion, publish and unpublish operations has been greatly reduced.
