@@ -1,0 +1,21 @@
+-----BEGIN CERTIFICATE-----
+MIIDiDCCAnCgAwIBAgIJALvHzL7vfC9nMA0GCSqGSIb3DQEBCwUAMFkxCzAJBgNV
+BAYTAkFVMRMwEQYDVQQIDApTb21lLVN0YXRlMSEwHwYDVQQKDBhJbnRlcm5ldCBX
+aWRnaXRzIFB0eSBMdGQxEjAQBgNVBAMMCWxvY2FsaG9zdDAeFw0xODA3MjMwOTEy
+MzBaFw0xODEwMjEwOTEyMzBaMFkxCzAJBgNVBAYTAkFVMRMwEQYDVQQIDApTb21l
+LVN0YXRlMSEwHwYDVQQKDBhJbnRlcm5ldCBXaWRnaXRzIFB0eSBMdGQxEjAQBgNV
+BAMMCWxvY2FsaG9zdDCCASIwDQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBANTN
+W243EOpIR/XQEJhtmGuYe9Iy5XJ3bzsrJqs3mgi2y10XxpjB5hKPee06HPiji0Ax
+HtlPdr8XwxoszEJ99dm12IPwFu/LRYx5s1T03KDl9c1nEXv3x9iLlM+cNZ8mkFmc
+ABboJOP+IpEyrR0HAij9FEa16SYxWCZ396wehvGaXABMnMYwFVqB8hAMRuezSWV/
++wLs5HyQAknyFbxess4WMy+X1KRExSug/PmMWGC3wR/GzkOO6sdYRShMNVudej7X
+NRj2IloT0IlxMvgunLMN5BWhFnTnfWzsGyR8ucdOVxDbUzINC8k07a4ZQK7LJ3Yo
+uJi97e5lI5ZAWArxMSUCAwEAAaNTMFEwHQYDVR0OBBYEFHskXPbSlDHygMAB4pnp
+B8a4AU3JMB8GA1UdIwQYMBaAFHskXPbSlDHygMAB4pnpB8a4AU3JMA8GA1UdEwEB
+/wQFMAMBAf8wDQYJKoZIhvcNAQELBQADggEBAMzj3enA7bxVSDVMSwb1zsiNbZr/
+rFFdcJKF3gcTLai95bzMx1y8tmHOzsIXnt5fxFDeJDLPCPjwJfOijGi8FFMODWtz
+tKwnmM5sOSVO0AnONyigPciBPhnw1TE4wfvnKsXfTe0yBTofbtbwCm9angLczCoD
+QPAKcQiCI0kdDPJLQCUk9f8waVvaM9dxIC1yOOPVtWfVZNQ2lpCJ8SS1fRoNbnlw
+FK59lzV6ICqjXAlfxKyl56cIRkZjITjNEroQIfuQ7Y9JtjCNfcVcCm7A1Lvaf1jd
+Q6m5bAauSS8jQY/WJ68yaI4U4drWtcFP4MLgR5V88PfyNKDVYo3/OHBnQBs=
+-----END CERTIFICATE-----
